[package]
name = "virust"
version = "1.0.1"
edition = "2021"

[build]
rustflags = ["-C", "link-arg=-fuse-ld=lld"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.26"
clap = { version = "4.3.4", features = ["derive"] }
eframe = "0.22.0"
log = "0.4.19"
pretty_env_logger = "0.5.0"
rand = "0.8.5"
tokio = { version = "1", features = ["full"] }

[profile.dev]
incremental = true

[profile.release]
incremental = true
strip = true
lto = true
codegen-units = 1
