[package]
name = "virust"
version = "2.1.3"
edition = "2021"
repository = "https://github.com/JuanCSUCoder/ViRust/"
readme = "README.md"
license = "MIT"
description = "ViRust is a 'benchmarking' tool or software that allows you to fill the desired amount of memory with random values, to see how your computer performs with limited RAM."
keywords = ["ram", "memory", "benchmark"]
categories = ["command-line-utilites", "development-tools"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.26"
clap = { version = "4.3.4", features = ["derive"] }
eframe = { version = "0.22.0", features = ["wgpu"] }
log = "0.4.19"
pretty_env_logger = "0.5.0"
rand = "0.8.5"
subprocess = "0.2.9"
thousands = "0.2.0"
tokio = { version = "1", features = ["full"] }

[profile.dev]
incremental = true

[profile.release]
incremental = true
strip = true
lto = true
codegen-units = 1
